--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "^11.0.2"
   },
   "dependencies": {
-    "date-fns": "^1.30.1"
+    "mxgraph": "^4.2.2"
   },
   "scripts": {
     "build": "rollup -c",
