--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "npm-run-all": "^4.1.5",
     "rollup": "^4.22.4",
-    "rollup-plugin-terser": "^7.0.2",
     "serve": "^14.2.3"
   },
   "dependencies": {
